--- a/src/scss/tools/_variables.scss
+++ b/src/scss/tools/_variables.scss
@@ -12,10 +12,12 @@ $extra-bold: 800;
 // Colors
 $white: #FFFFFF;
 $grey: #3b4360;
+$darkgrey: #717374;
 $black: #000000;
 $first-color: #dc0368;
 $second-color: #6c0287;
 $third-color: #161e38;
+
 
 // Gradient
 $gradient: linear-gradient(90deg, $first-color 0%, $second-color 99%, $second-color 100%);
