:poop: add favicon.ico

--- a/App/Views/layouts/default.twig
+++ b/App/Views/layouts/default.twig
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>{{ title(title) }}</title>
-    <meta name="description" content="{{ description }}" />
+    <meta name="description" content="{{ description }}" />git
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('img/favicons/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" href="{{ asset('img/favicons/favicon-32x32.png') }}" sizes="32x32">
+    <link rel="icon" type="image/png" href="{{ asset('img/favicons/favicon-16x16.png') }}" sizes="16x16">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600i,800|Source+Code+Pro" rel="stylesheet">
     <link href="{{ asset('css/app.min.css') }}" rel="stylesheet" type="text/css" />
+
 </head>
 
 
