--- a/App/Views/pages/index.twig
+++ b/App/Views/pages/index.twig
@@ -27,6 +27,7 @@
                 <span class="weather">Cloudy</span>
             </div>
         </section>
+        <input class="zoom" type="range" min="10" max="60" step="0.1" />
         <!-- Section which contains the skymap -->
         <section id="container-skymap"></section>
         <!-- Section which contains the slider -->
