--- a/src/scss/components/space.scss
+++ b/src/scss/components/space.scss
@@ -39,7 +39,7 @@ body.body-space
         .search-constellation
         {
             position: absolute;
-            bottom: 110px;
+            bottom: 15%;
             left: -3px;
             z-index: 20;
 
@@ -260,7 +260,7 @@ body.body-space
                                 left: 45%;
                                 background: $white;
                                 border: none;
-                                border-radius: 10px;
+                                border-radius: 15px;
                                 outline: none;
                                 cursor: pointer;
                                 transition: all 0.3s ease;
@@ -298,19 +298,33 @@ body.body-space
 
                             .button-constellation
                             {
+                                background-image: $gradient-bubble;
+
+                                &::before, &::after
+                                {
+                                    position: absolute;
+                                    content: ' ';
+                                    background-image: $gradient-bubble;
+                                    border-radius: 30px;
+                                }
+
+                                &::before
+                                {
+
+                                    height: 25px;
+                                    width: 25px;
+                                    top: -5px;
+                                    left: -5px;
+                                    opacity: 0.15;
+                                }
 
                                 &::after
                                 {
-                                    height: 25px;
-                                    width: 25px;
-                                    position: absolute;
-                                    top: -5px;
-                                    left: -5px;
-                                    content: ' ';
-                                    background: $second-color;
-                                    box-shadow: 0px 0px 10px 5px $second-color;
-                                    opacity: 0.5;
-                                    border-radius: 15px;
+                                    height: 35px;
+                                    width: 35px;
+                                    top: -10px;
+                                    left: -10px;
+                                    opacity: 0.15;
                                 }
                             }
                         }
