--- a/src/scss/tools/_variables.scss
+++ b/src/scss/tools/_variables.scss
@@ -21,6 +21,7 @@ $third-color: #161e38;
 
 // Gradient
 $gradient: linear-gradient(90deg, $first-color 0%, $second-color 99%, $second-color 100%);
+$gradient-bubble: linear-gradient(180deg, #d6a0e3 0%, #9430ad 99%, #9430ad 100%);
 
 // Box shadow
 $box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.50);
