--- a/App/Views/pages/index.twig
+++ b/App/Views/pages/index.twig
@@ -31,7 +31,11 @@
                 <span class="weather">{{ meteo }}</span>
             </div>
         </section>
-        <input class="zoom" type="range" min="10" max="60" step="0.1" />
+        <div class="container-zoom">
+            <div class="zoom-in">+</div>
+            <input class="zoom" type="range" min="10" max="60" step="0.1" />
+            <div class="zoom-out">-</div>
+        </div>
         <!-- Section which contains the skymap -->
         <section id="container-skymap"></section>
         <!-- Section which contains the slider -->
