--- a/App/Views/layouts/default.twig
+++ b/App/Views/layouts/default.twig
@@ -36,7 +36,9 @@
             latitude: {{ lat }},
             live : true,
             keyboard: false,
-            lang:'en'
+            lang:'en',
+            showstarlabels: true,
+            scalestars: 2
         });
         planetarium.draw();
     };
