--- a/src/scss/components/space.scss
+++ b/src/scss/components/space.scss
@@ -53,7 +53,7 @@ body.body-space
                     border-radius: 0 50px 50px 0;
                     outline: none;
                     background: transparent;
-                    color: $white;
+                    color: $darkgrey;
                     font-family: $main-font;
 
                     &::placeholder
