:racehorse: live search update

--- a/App/Views/pages/404.twig
+++ b/App/Views/pages/404.twig
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<body class="body-index">
-<section class="container-landing" style="background-image:url('{{ asset('img/bg.png') }}');">
+<body class="body-index" style="background-image:url('{{ asset('img/bg.png') }}');">
+<section class="container-landing" >
     <!-- Name of the website -->
     <div class="logo">
         <img src="{{ asset('img/logo_sky.png') }}" alt="Logo of the website">
@@ -12,7 +12,7 @@
     <h2>404 error</h2>
     <p>Oups... You are lost ?</p>
     <!-- Input for the city that the user enter -->
-    <a class="button-home" href="">Return to the home</a>
+    <a class="button-home" href="/">Return to the home</a>
 
 </section>
 
