--- a/App/Views/pages/welcome.twig
+++ b/App/Views/pages/welcome.twig
@@ -13,7 +13,7 @@
     <p>Drag and drop the sky to navigate in the constellations. Click on a bubble in the slider to see the information of the constellation you choose.</p>
     <!-- Input for the city that the user enter -->
     <form action="welcome" method="post">
-        <input type="submit" value="Start" name="start">
+        <input class="welcome" type="submit" value="Start" name="start">
     </form>
 </section>
 
