--- a/src/scss/tools/_variables.scss
+++ b/src/scss/tools/_variables.scss
@@ -29,3 +29,9 @@ $box-shadow-2: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
 
 // Transition
 $transition: all 0.3s ease-in-out;
+
+// Breakpoints
+$phone: 544px;
+$tablet: 768px;
+$desktop: 992px;
+$wide-desktop: 1200px;
